--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,19 +10,19 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/locknlivec"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PI3ES2024T24"
+        android:theme="@style/Theme.NavigationDrawer"
         tools:targetApi="31">
         <activity
             android:name=".HomeActivity"
-            android:exported="false" />
+            android:theme="@style/Theme.HomeActivity"
+            android:exported="true" />
         <activity
             android:name=".SignInActivity"
             android:exported="false" />
         <activity
             android:name=".SignUpActivity"
             android:exported="false"
-            android:label="@string/title_activity_sign_up"
-            android:theme="@style/Theme.PI3ES2024T24" />
+            />
         <activity
             android:name=".MainActivity"
             android:exported="true">
